--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = kuryr
+name = kuryr-lib
 version = 0.1.0
 summary = Docker libnetwork driver for OpenStack Neutron
 description-file =
