Refactoring: Drop all the code except common one
Implements blueprint code-refactoring

Related patchset in kuryr-libnetwork:
https://review.openstack.org/#/c/337350/

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = kuryr
+name = kuryr-lib
 version = 0.1.0
 summary = Docker libnetwork driver for OpenStack Neutron
 description-file =
@@ -37,7 +37,6 @@ data_files =
         usr/libexec/kuryr/ovs
         usr/libexec/kuryr/tap
         usr/libexec/kuryr/unbound
-    /usr/lib/docker/plugins/kuryr = etc/kuryr.spec
 
 [build_sphinx]
 source-dir = doc/source
